# agent

./: .gitignore  architecture  architecture-구조도  init.py  main.py  pyproject.toml  readme  requirements.txt  router.py  run.py  tree  usage  설계 리뷰
agent/: agent.py  execution_agent.py  planning_agent.py  planning_agent_mcts.py  plugin.py  tool_agent.py  validation_agent.py
agent/selector/: base.py
core/: __init__.py  agent.py  llm.py  mcp.py  plugin.py
core/agent/: chat.py  weather.py
core/api/: app.py
core/llm/: __init__.py  base.py  local_llm.py  runner.py
core/validator/: __init__.py  validate.py
models/: api_model.py  model.py
plugin/: base.py  manager.py  registry.py  scanner.py
plugins/: reserve.py  schedule_recommend.json  schedule_recommend.md  schedule_recommend.py  summarize.py  test.py  weather.json  weather.md  weather.py
scheme/: a2a_message.py  mcp.py
scripts/git-hooks/: commit_types.py  install_hooks.py
static/: index.html  index2.html
tests/: test_execution_agent.py  test_planning_agent.py  test_planning_agent_mcts.py  test_tool_agent.py  test_util.py  test_validation_agent.py
utils/: __init__.py  constant.py  env.py  logging.py  util.py
