[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["jihkang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
torch = "^2.6.0"
transformers = "^4.50.3"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
llama-cpp-python = "^0.3.8"
huggingface-hub = "^0.30.2"
uvicorn = {extras = ["standard"], version = "^0.34.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
